--- a/demo/scss/components/_component.scss
+++ b/demo/scss/components/_component.scss
@@ -44,6 +44,11 @@
     .lx-component__toolbar {
         border-bottom: 1px solid $black-4;
     }
+    
+    // Component: demo
+    .lx-component__demo {
+        background-color: $white;
+    }
 
 
 
