--- a/demo/scss/lumx.scss
+++ b/demo/scss/lumx.scss
@@ -12,7 +12,9 @@
 
 @import "layout/header";
 @import "layout/app";
-@import "layout/sidebar";
+@import "layout/main-nav";
+@import "layout/sub-nav";
+@import "layout/palm-nav";
 @import "layout/main";
 
 @import "components/component";
