--- a/demo/includes/css/color/helper.html
+++ b/demo/includes/css/color/helper.html
@@ -1,18 +1,18 @@
-<div flex-container="row" flex-gutter="24">
+<div class="p+" flex-container="row" flex-gutter="24">
     <div flex-item>
-        <div class="card bgc-indigo-500 tc-white-1 p+">
+        <div class="bgc-indigo-500 tc-white-1 p+">
             Lorem Ipsum
         </div>
     </div>
-
+ 
     <div flex-item>
-        <div class="card bgc-blue-100 tc-black-1 p+">
+        <div class="bgc-blue-100 tc-black-1 p+">
             Lorem Ipsum
         </div>
     </div>
-
+ 
     <div flex-item>
-        <div class="card tc-green-500 p+">
+        <div class="tc-green-500 p+">
             Lorem Ipsum
         </div>
     </div>
