--- a/demo/scss/objects/_color.scss
+++ b/demo/scss/objects/_color.scss
@@ -1,12 +1,9 @@
 ///*------------------------------------*\
-//    #COLORS
+//    #COLOR
 //\*------------------------------------*/
 
-// Colors
-.colors {
-    margin-bottom: $base-spacing-unit * 3;
-    @extend %bare-list;
-
+// Color
+.color {
     & > div {
         height: $base-spacing-unit * 6;
         padding: 0 $base-spacing-unit * 2;
@@ -14,33 +11,33 @@
     }
 }
 
-    // Colors: main
-    .colors__main {
+    // Color: main
+    .color__main {
         position: relative;
-        height: $base-spacing-unit * 12 !important;
+        height: 96px !important;
         margin-bottom: $base-spacing-unit;
         line-height: 1em !important;
 
-        .colors__variable {
+        .color__variable {
             @include position(absolute, null null $base-spacing-unit * 2 $base-spacing-unit * 2);
         }
     }
 
-    // Colors: title
-    .colors__title {
+    // Color: title
+    .color__title {
         @include position(absolute, $base-spacing-unit * 2 null null $base-spacing-unit * 2);
         @include font-size(18px);
         font-weight: 500;
         color: $white;
     }
 
-    // Colors: variable
-    .colors__variable {
+    // Color: variable
+    .color__variable {
         @include font-size(14px);
         font-weight: 500;
         color: $white;
     }
 
-    .colors__variable--black {
+    .color__variable--black {
         color: $black !important;
     }
