chore demo: add getting started documentation

--- a/demo/includes/getting-started/contribute.html
+++ b/demo/includes/getting-started/contribute.html
@@ -1,31 +1,16 @@
-<!-- Sidebar -->
-<ng-include src="'/includes/sidebar/sidebar-start.html'"></ng-include>
-
 <div class="main-section">
-    <h3 class="main-section__title">Contribute</h3>
+    <h1 class="main-section__title">Contribute</h1>
 
     <p class="main-section__intro">
         We'd love for you to contribute to our source code and to make LumX even better than it is today!
     </p>
 
-    <div class="main-section__content">
-        <div class="paragraph">
-            <h4 class="main-section__subtitle">Installation</h4>
+    <lx-component lx-title="Installation" lx-no-demo="true">
+        The installation procedure is available in the <a href="https://github.com/lumapps/lumx/blob/master/README.md" target="_blank">README file.</a>
+    </lx-component>
 
-            <p>
-                The installation procedure is available in the <a href="https://github.com/lumapps/lumx/blob/master/README.md" target="_blank">README file.</a>
-            </p>
-        </div>
-    </div>
-
-    <div class="main-section__content">
-        <div class="paragraph">
-            <h4 class="main-section__subtitle">Guidelines</h4>
-
-            <p>
-                To keep LumX clean and easy to maintain by everyone, we chose to follow some guidelines.<br />
-                You can find them in our <a href="https://github.com/lumapps/lumx/blob/master/CONTRIBUTING.md" target="_blank">GitHub repository</a>.
-            </p>
-        </div>
-    </div>
+    <lx-component lx-title="Guidelines" lx-no-demo="true">
+        To keep LumX clean and easy to maintain by everyone, we chose to follow some guidelines.<br />
+        You can find them in our <a href="https://github.com/lumapps/lumx/blob/master/CONTRIBUTING.md" target="_blank">GitHub repository</a>.
+    </lx-component>
 </div>
