chore depth: add z-depth management

--- a/modules/progress/scss/_progress.scss
+++ b/modules/progress/scss/_progress.scss
@@ -94,8 +94,7 @@
 
 // Progress linear
 .progress-linear {
-    @include position(absolute, null 0 0 0);
-    z-index: 999;
+    position: relative;
     height: 4px;
     overflow: hidden;
 }
