feat flexbox: add 16 columns option

--- a/core/scss/base/_flexbox.scss
+++ b/core/scss/base/_flexbox.scss
@@ -197,17 +197,33 @@
 }
 
 @for $i from 1 through 12 {
-    [flex-container="row"] > [flex-item="#{$i}"] {
+    [flex-container="row"][flex-column="12"] > [flex-item="#{$i}"] {
         @include media-query(desk) {
             @include flex(0 0 #{(100 / 12) * $i + '%'});
             max-width: #{(100 / 12) * $i + '%'};
         }
     }
 
-    [flex-container="column"] > [flex-item="#{$i}"] {
+    [flex-container="column"][flex-column="12"] > [flex-item="#{$i}"] {
         @include media-query(desk) {
             @include flex(0 0 #{(100 / 12) * $i + '%'});
             max-height: #{(100 / 12) * $i + '%'};
+        }
+    }
+}
+
+@for $i from 1 through 16 {
+    [flex-container="row"][flex-column="16"] > [flex-item="#{$i}"] {
+        @include media-query(desk) {
+            @include flex(0 0 #{(100 / 16) * $i + '%'});
+            max-width: #{(100 / 16) * $i + '%'};
+        }
+    }
+
+    [flex-container="column"][flex-column="16"] > [flex-item="#{$i}"] {
+        @include media-query(desk) {
+            @include flex(0 0 #{(100 / 16) * $i + '%'});
+            max-height: #{(100 / 16) * $i + '%'};
         }
     }
 }
@@ -240,7 +256,7 @@
 
 
 // Flex item order
-@for $i from 1 through 12 {
+@for $i from 1 through 16 {
     [flex-item-order="#{$i}"] {
         @include media-query(desk) {
             @include order($i);
