--- a/demo/includes/css/flexbox.html
+++ b/demo/includes/css/flexbox.html
@@ -6,8 +6,8 @@
     </p>
     
     <lx-component lx-title="Basic usage" lx-path="/includes/css/flexbox/basic.html">
-        A row flex container is splitted into 12 columns.<br />
-        Each flex item inside a row flex container has a width from 1 to 12.<br />
+        A row flex container is splitted into 12 or 16 columns specified in the flex-column attribute.<br />
+        Each flex item inside a row flex container has a width from 1 to the number of columns.<br />
         If no width is specified, the flex item will fit the available width inside the row.<br />
         A gutter can be specified to separate flex items inside the row (8px, 16px, 24px).
     </lx-component>
