--- a/modules/select/views/select.html
+++ b/modules/select/views/select.html
@@ -1,7 +1,5 @@
 <div class="lx-select"
-     ng-class="{ 'lx-select--custom-style': lxSelect.customStyle,
-                 'lx-select--default-style': !lxSelect.customStyle,
-                 'lx-select--error': lxSelect.error,
+     ng-class="{ 'lx-select--error': lxSelect.error,
                  'lx-select--fixed-label': lxSelect.fixedLabel,
                  'lx-select--is-active': (!lxSelect.multiple && lxSelect.getSelectedModel()) || (lxSelect.multiple && lxSelect.getSelectedModel().length),
                  'lx-select--is-disabled': lxSelect.ngDisabled,
