--- a/modules/select/demo/includes/ajax.html
+++ b/modules/select/demo/includes/ajax.html
@@ -1,16 +1,16 @@
 <div class="p+ pt0">
-    <lx-select ng-change="vm.selectCallback"
+    <lx-select ng-change="vm.selectCallback(newValue, oldValue)"
                ng-model="vm.selectAjax.selected"
                lx-allow-clear="true"
                lx-choices="vm.selectAjax.list"
                lx-display-filter="true"
-               lx-filter="vm.selectAjax.update"
+               lx-filter="vm.selectAjax.update(newValue)"
                lx-helper="!vm.selectAjax.list.length"
                lx-helper-message="Type minimum 2 to search"
                lx-label="Lorem Ipsum"
                lx-loading="vm.selectAjax.loading"
-               lx-model-to-selection="vm.selectAjax.toSelection"
-               lx-selection-to-model="vm.selectAjax.toModel">
+               lx-model-to-selection="vm.selectAjax.toSelection(data, callback)"
+               lx-selection-to-model="vm.selectAjax.toModel(data, callback)">
         <lx-select-selected>
             {{ $selected.Title }} ({{ $selected.Year }})
         </lx-select-selected>
