feat date picker: handle callback with param

--- a/modules/date-picker/demo/includes/basic.html
+++ b/modules/date-picker/demo/includes/basic.html
@@ -9,7 +9,7 @@
  
     <lx-date-picker id="{{ vm.datePickerId }}"
                     ng-model="vm.datePicker.date"
-                    lx-callback="vm.datePickerCallback"
+                    lx-callback="vm.datePickerCallback(newDate)"
                     lx-locale="{{ vm.locale }}"
                     lx-max-date="vm.datePicker.maxDate"
                     lx-min-date="vm.datePicker.minDate"></lx-date-picker>
