--- a/modules/file-input/demo/includes/basic.html
+++ b/modules/file-input/demo/includes/basic.html
@@ -1,3 +1,3 @@
 <div class="p+ pt0">
-    <lx-file-input lx-label="Browse..." lx-callback="vm.manageFile"></lx-file-input>
+    <lx-file-input lx-label="Browse..." lx-callback="vm.manageFile(newFile)"></lx-file-input>
 </div>
