chore demo: add documentation homepage

--- a/demo/includes/home/home.html
+++ b/demo/includes/home/home.html
@@ -1,1 +1,40 @@
-Lorem ipsum
+<div class="home">
+    <div class="home-banner">
+        <div class="home-banner__wrapper">
+            <h1 class="home-banner__title">
+                Made with the latest technologies
+            </h1>
+
+            <h2 class="home-banner__subtitle">
+                LumX will help you to design beautiful applications, faster and easier. We’ve built it based on Google guidelines, respecting metrics in a pixel perfect way.
+            </h2>
+
+            <a href="https://github.com/lumapps/lumX/releases/latest" target="_blank" class="home-banner__download">Download LumX</a>
+        </div>
+    </div>
+
+    <div class="home-features">
+        <div class="home-features__wrapper" flex-container="row" flex-column="12" flex-gutter="24">
+            <div class="home-feature" flex-item>
+                <div class="home-feature__wrapper">
+                    <h3>Sass Preprocessor</h3>
+                    <p>Built with Sass, Bourbon and Neat, you'll be able to quickly customize your application design. Moreover, your Sass and Javascript files will be automatically optimized with Gulp to improve your application performance.</p>
+                </div>
+            </div>
+
+            <div class="home-features__feature" flex-item>
+                <div class="home-feature__wrapper">
+                    <h3>AngularJS</h3>
+                    <p>We've choosen AngularJS for LumX because we think it's the best Javascript MVC Framework to build robust and fast one-page applications. And of course, because it has been made and is still maintained by Google.</p>
+                </div>
+            </div>
+
+            <div class="home-features__feature" flex-item>
+                <div class="home-feature__wrapper">
+                    <h3>Sass Preprocessor</h3>
+                    <p>Performance is highly important for any web application. That's why we only use jQuery without any of its plugin. Each component was then home made to be perfectly plugged to your AngularJS application.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
