--- a/demo/scss/layout/_main-nav.scss
+++ b/demo/scss/layout/_main-nav.scss
@@ -61,7 +61,7 @@
 
             &:hover,
             &.main-nav-link__state--is-active {
-                border-bottom: 4px solid $yellow;
+                border-bottom: 4px solid $amber;
             }
         }
     }
