--- a/demo/scss/lumx.scss
+++ b/demo/scss/lumx.scss
@@ -16,6 +16,8 @@
 @import "layout/sub-nav";
 @import "layout/palm-nav";
 @import "layout/main";
+@import "layout/footer";
+@import "layout/home";
 
 @import "components/component";
 
