feat date picker: add the possibility to transclude a text field

--- a/modules/date-picker/scss/_date-picker.scss
+++ b/modules/date-picker/scss/_date-picker.scss
@@ -20,6 +20,22 @@
 
 
 
+// Date input
+.lx-date-input {
+    &,
+    input {
+        cursor: pointer !important;
+    }
+
+    input {
+        pointer-events: none;
+    }
+}
+
+
+
+
+
 // Date picker
 .lx-date-picker {
     display: none;
