--- a/modules/date-picker/demo/includes/basic.html
+++ b/modules/date-picker/demo/includes/basic.html
@@ -1,16 +1,14 @@
-<div class="p+ pt0">
-    <lx-text-field lx-label="Pick a date" lx-allow-clear="true">
-        <input type="text" ng-model="vm.datePicker.dateFormatted">
-    </lx-text-field>
+<div class="p+">
+    {{ vm.datePicker.basic.dateFormatted }}
  
     <div class="mt">
         <lx-button ng-click="vm.openDatePicker(vm.datePickerId)">Open date picker</lx-button>
     </div>
  
     <lx-date-picker id="{{ vm.datePickerId }}"
-                    ng-model="vm.datePicker.date"
+                    ng-model="vm.datePicker.basic.date"
                     lx-callback="vm.datePickerCallback(newDate)"
                     lx-locale="{{ vm.locale }}"
-                    lx-max-date="vm.datePicker.maxDate"
-                    lx-min-date="vm.datePicker.minDate"></lx-date-picker>
+                    lx-max-date="vm.datePicker.basic.maxDate"
+                    lx-min-date="vm.datePicker.basic.minDate"></lx-date-picker>
 </div>
