chore demo: enhance documentation layout

--- a/demo/includes/layout/header/header.html
+++ b/demo/includes/layout/header/header.html
@@ -15,6 +15,10 @@
             
             <div class="header-top__right">
                 <iframe src="https://ghbtns.com/github-btn.html?user=lumapps&repo=lumX&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
+
+                <a href="https://github.com/lumapps/lumX" target="_blank">
+                    <img src="/images/github/github.png">
+                </a>
             </div>
         </div>
     </div>
