--- a/demo/includes/home/home.html
+++ b/demo/includes/home/home.html
@@ -2,7 +2,7 @@
     <div class="home-banner">
         <div class="home-banner__wrapper">
             <h1 class="home-banner__title">
-                Made with the latest technologies
+                A front-end framework based on Google Material Design
             </h1>
 
             <h2 class="home-banner__subtitle">
@@ -18,7 +18,7 @@
             <div class="home-feature" flex-item>
                 <div class="home-feature__wrapper">
                     <h3>Sass Preprocessor</h3>
-                    <p>Built with Sass, Bourbon and Neat, you'll be able to quickly customize your application design. Moreover, your Sass and Javascript files will be automatically optimized with Gulp to improve your application performance.</p>
+                    <p>Built with Sass and Bourbon, you'll be able to quickly customize your application design. Moreover, your Sass and Javascript files will be automatically optimized with Gulp to improve your application performance.</p>
                 </div>
             </div>
 
@@ -31,7 +31,7 @@
 
             <div class="home-features__feature" flex-item>
                 <div class="home-feature__wrapper">
-                    <h3>Sass Preprocessor</h3>
+                    <h3>Just a little bit of jQuery</h3>
                     <p>Performance is highly important for any web application. That's why we only use jQuery without any of its plugin. Each component was then home made to be perfectly plugged to your AngularJS application.</p>
                 </div>
             </div>
