--- a/demo/scss/layout/_main.scss
+++ b/demo/scss/layout/_main.scss
@@ -22,3 +22,15 @@
             color: $primary;
         }
     }
+    
+    // Main section: warning
+    .main-section__warning {
+        margin-top: $base-spacing-unit * 3;
+        padding: $base-spacing-unit * 2;
+        border: 1px solid $indigo-100;
+        border-radius: $base-round;
+        background-color: $indigo-50;
+        @include font-size(14px);
+        font-weight: 700;
+        color: $primary;
+    }
