chore demo: fix mixin documentation

--- a/demo/includes/css/mixin.html
+++ b/demo/includes/css/mixin.html
@@ -2,7 +2,7 @@
     <h1 class="main-section__title">Mixin</h1>
 
     <p class="main-section__intro">
-        Some mixins are available in order to help you building great applications faster.
+        Added to Bourbon, some mixins are available in order to help you building great applications faster.
     </p>
     
     <lx-component lx-title="Font size" lx-path="/includes/css/mixin/font-size.html" lx-language="css" lx-is-open="true" lx-no-demo="true">
