--- a/core/scss/base/_flexbox.scss
+++ b/core/scss/base/_flexbox.scss
@@ -197,13 +197,15 @@
 }
 
 @for $i from 1 through 12 {
+    [flex-container="row"] > [flex-item="#{$i}"],
     [flex-container="row"][flex-column="12"] > [flex-item="#{$i}"] {
         @include media-query(desk) {
             @include flex(0 0 #{(100 / 12) * $i + '%'});
             max-width: #{(100 / 12) * $i + '%'};
         }
     }
-
+    
+    [flex-container="column"] > [flex-item="#{$i}"],
     [flex-container="column"][flex-column="12"] > [flex-item="#{$i}"] {
         @include media-query(desk) {
             @include flex(0 0 #{(100 / 12) * $i + '%'});
