--- a/demo/includes/getting-started/installation.html
+++ b/demo/includes/getting-started/installation.html
@@ -21,7 +21,7 @@
             <li>AngularJS</li>
             <li>jQuery</li>
             <li>Velocity</li>
-            <li>Moment.js</li>
+            <li>Moment.js (date picker only)</li>
             <li>Bourbon (scss only)</li>
             <li>Material Design Icons (scss only)</li>
         </ul>
