chore demo: handle with github stuff

--- a/demo/includes/home/home.html
+++ b/demo/includes/home/home.html
@@ -10,6 +10,8 @@
             </h2>
 
             <a href="https://github.com/lumapps/lumX/releases/latest" target="_blank" class="home-banner__download">Download LumX</a>
+
+            <span class="home-banner__version">v1.0.0RC1</span>
         </div>
     </div>
 
