--- a/demo/scss/layout/_home.scss
+++ b/demo/scss/layout/_home.scss
@@ -68,6 +68,12 @@
         text-decoration: none;
         text-transform: uppercase;
     }
+    
+    // Home banner: version
+    .home-banner__version {
+        margin-top: $base-spacing-unit;
+        color: $white-2;
+    }
 
 
 
